# CompSeed

./: CMakeLists.txt  Makefile  README.md  main.cpp  manager.cpp  manager.h  memory_align.cpp  show_results.py  test.cpp  visualize_btree.py
FM_index/: bwt.h
Matching/: SimplePgMatcher.cpp  SimplePgMatcher.h
PgRC_BWA_MEM/: BTree.h  SST.h  bwa_seeding.cpp  bwa_seeding.h  bwamem.c  bwamem.h  comp_seeding.cpp  comp_seeding.h
PseudoGenome/: ExtendReadsList.cpp  ExtendReadsList.h  PseudoGenomeBase.cpp  PseudoGenomeBase.h  PseudoGenomeHeader.h  SeparatedPG.cpp  SeparatedPG.h
PseudoGenome/ReadList/: ExtendIteratorInterface.h  ExtendReadsList.cpp  ExtendReadsList.h
ReadsSet/: ReadsSetBase.cpp  ReadsSetBase.h
Utils/: LzmaLib.cpp  LzmaLib.h  VarLenDNACoder.cpp  VarLenDNACoder.h  helper.cpp  helper.h
bwalib/: bwa.h  kopen.h
cstl/: kthread.h
mapping/: SST.cpp  bwamem.c  bwamem.h  bwamem_extra.c  bwamem_pair.c  comp_seed.cpp  comp_seed.h  fastmap.c  macro.h  memcpy_bwamem.cpp  memcpy_bwamem.h
run_and_test/: bwa_minicom.sh  bwa_pgrc.sh  bwa_spring.sh  compress.sh  compress_all.sh  fig_coverage.py  fig_param.py  fig_ram.py  minicom_all.sh  pgrc_all.sh  show_results.py  spring_all.sh  vary_k.sh  vary_r.sh
seeding/: BTree.h  SST.cpp  SST.h  bwa_seeding.c  bwamem.c  bwamem_extra.c  bwamem_pair.c  comp_seeding.cpp  comp_seeding.h  tmp_comp_seed.c
